fixes header adds size to modal aligns text to center

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -6,8 +6,6 @@ nav {
 }
 
 table, tbody, th, tr, td {
-  text-align: center;
-  margin: auto;
   color: rgb(0, 0, 139);
 }
 
